# youtube-downloader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: captions.py  captions_not_working.py  clients.py  loader.py  main.py  transcribe.py  translate.py  utils.py  videos.py
tests/: sample_caption.srt  sample_caption.vtt  sample_caption_no_index.srt  sample_caption_no_index.vtt  sample_wt.json  test_caption_converter.py  test_spacy.py  test_srt_converter.py
