[project]
name = "youtube-downloader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "EbaraKoji", email = "kojieva5270@gmail.com" }
]
dependencies = [
    "pytube==15.0.0",
    "moviepy>=1.0.3",
    "youtube-transcript-api>=0.6.2",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20231117",
    "python-dotenv>=1.0.1",
    "spacy>=3.7.5",
    "numpy==1.26.4",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_downloader"]
